--- a/profil_style.css
+++ b/profil_style.css
@@ -7,10 +7,56 @@
     display: flex;
     flex-wrap: wrap;
 }
-        
-.profile{
-    border: 5px solid black;
-    padding: 10px;
-    width: 33%
+
+#chat_window{
+    width: 100%;
+    min-width: 500px;
+    height: 60%;
+    min-height: 500px;
+    background-color: 
 }
 
+#chat{
+    background-color: white;
+    width: 90%;
+    
+    height: 50%;
+
+}
+
+.l{
+    text-align: left;
+    width: 505;
+}
+
+.r{
+    text-align: right;
+    width: 50%;
+}
+
+.chat_button{
+    width: 30%;
+}
+
+
+        
+.profile{
+    border: 5px solid saddlebrown;
+    border-radius: 50px;
+    padding: 20px;
+    width: 33%;
+    background-color: floralwhite;
+}
+
+
+
+body{
+    background-color:antiquewhite;
+    color: saddlebrown;
+    font-family: arial;
+}
+
+h1{
+    font-family: Brush Script MT;
+    
+}
