--- a/profil_style.css
+++ b/profil_style.css
@@ -35,16 +35,18 @@
 }
 
 .l{
-    text-align: left;
-    width: 50%;
-    padding-left: 10px;
+    text-align: right;
+    padding-right: 10px;
     color: blue
+        
+        
 }
 
 .r{
-    text-align: right;
-    padding-right: 10px;
-    color: green
+    text-align: left;
+    width: 50%;
+    padding-left: 10px;
+    color: green;
 }
 
         
@@ -159,7 +161,7 @@ p{
     
 }
 
-input[type=button]{
+input[type=button]:not(.chat_button){
     background-color: #444444;
     border: none;
     color: white;
